--- a/style.css
+++ b/style.css
@@ -498,7 +498,45 @@ input[type="text"].btn-square:focus {
 }
 
 .showInfor {
-    bottom: 40px;
+    animation-timing-function: ease;
+    animation-name: showInforAnimate;
+    animation-duration: 5s;
+}
+
+.showInfor2 {
+    animation-timing-function: ease;
+    animation-name: showInforAnimate2;
+    animation-duration: 5s;
+}
+
+@keyframes showInforAnimate {
+    0% {
+        bottom: -40px;
+    }
+    25% {
+        bottom: 40px;
+    }
+    75% {
+        bottom: 40px;
+    }
+    100% {
+        bottom: -40px;
+    }
+}
+
+@keyframes showInforAnimate2 {
+    0% {
+        bottom: -40px;
+    }
+    25% {
+        bottom: 40px;
+    }
+    75% {
+        bottom: 40px;
+    }
+    100% {
+        bottom: -40px;
+    }
 }
 
 @keyframes xoay {
