--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
     width: 100vw;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     z-index: 0;
     filter: blur(5px);
 }
@@ -363,8 +364,8 @@ p {
     background-size: cover;
     background-position: center;
     filter: blur(3px);
-    height: 100%;
-    width: 100%;
+    height: 100px;
+    width: 364px;
     z-index: 100;
     opacity: 0.9;
 }
